--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF 8">
         <title>Griot Theater</title>
         <link rel="stylesheet" a href="./style.css">
-    </head>
-    <body>
+   </head>
+   <body>
         <header>
         <nav class="nav-bar">
             <h1 class="nav-bar" id="brand-title">Griot Theater</h1>
@@ -34,50 +34,111 @@
             <h1 id="featured-show">Featured Shows</h1>
             <image class="banner"src="theater-image-background.png" id="background-image" alt="Griot-Theater">
             </image>
-            <article class="flexbox-container">
-                <div class="flexbox-item">
-                    <image src="a-raisin-in-the-sun-theater-1.png"></image> </image>   
+            <article class="flex-container" id="show-list">
+                <div>
+                    <h2 id="date">April 2020</h2>
                 </div>
-                <div class="flexbox-item">
+                <div>
                     <image src="a-raisin-in-the-sun-theater-1.png"></image> </image>
                 </div>
-                <div class="flexbox-item">
+                <div id="show-item" class="flexbox-item">
+                    <h2>A Raisin In The Sun
+                    <p>Griot Theater,233 State st, Chicago, IL</p>
+                    <p>$75</p>
+                    </h2> 
+                </div>
+                <button type="button" class="btn">Read More</button>
+                <div>
                     <image src="a-raisin-in-the-sun-theater-1.png"></image> </image>
                 </div>
-                <div class="flexbox-item">
+                <div id="show-item" class="flexbox-item">
+                    <h2>A Raisin In The Sun
+                    <p>Griot Theater,233 State st, Chicago, IL</p>
+                    <p>$75</p>
+                    </h2>
+                </div>
+                <button type="button" class="btn">Read More</button>
+                <div>
                     <image src="a-raisin-in-the-sun-theater-1.png"></image> </image>
                 </div>
+                <div id="show-item" class="flexbox-item">
+                    <h2>A Raisin In The Sun
+                    <p>Griot Theater,233 State st, Chicago, IL</p>
+                    <p>$75</p>
+                    </h2>
+                </div>
+                <button type="button" class="btn">Read More</button>
+                <div>
+                    <image src="a-raisin-in-the-sun-theater-1.png"></image> </image>
+                </div>
+                <div id="show-item" class="flexbox-item">
+                    <h2>A Raisin In The Sun
+                    <p>Griot Theater,233 State st, Chicago, IL</p>
+                    <p>$75</p>
+                    </h2>
+                </div>
+                <button type="button" class="btn">Read More</button>
 
             </article>
 
         </main>
         <footer>
-            <div class="flexbox-container">
-              <div class="flexbox-item">
-                <image src="il_chicago_60611.png" id="chicago-map"></image>
-              </div>  
-              <div class="flexbox-item">
-                <h1> Info</h1>
-                <ul>
-                <p class="nav-link">
-                    <a href="#"> Chicago, IL 60611 United States</a>
-                </p>
-                </ul>
-                <p class="nav-link">
-                    <a href="#"> example@example.com</a>
-                </p>
-
-                <p class="nav-link">
-                    <a href="#"> Call us: 708-555-4488</a>
-                </p>
-              </div> 
-              <div class="flexbox-item">
-                <h1>Shows</h1>
-
-              </div>  
-              <div class="flexbox-item">
-                <h1>Social</h1>
-              </div>  
+            <div id="footer" class="flex-container">
+                <div class="flexbox-item">  
+                    <image src="il_chicago_60611.png" id="chicago-map"></image>
+                </div>  
+                <div class="flexbox-item">
+                    <ul>
+                        <li>
+                            <h1> Info</h1>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#"> Chicago, IL 60611 United States</a></p>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#"> example@example.com</a></p>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#"> Call us: 708-555-4488</a></p>
+                        </li>
+                    </ul>
+                </div> 
+                <div class="flexbox-item">
+                    <ul>
+                        <li>
+                            <h1>Shows</h1>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#">The Piano Lesson</a></p>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#">A Raisin In The Sun</a></p>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#">FAME</a></p>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#">The Color Purple</a></p>
+                        </li>
+                </div>  
+                <div class="flexbox-item">
+                    <ul>
+                        <li>
+                            <h1>Social</h1>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#">Facebook</a></p>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#">Twitter</a></p>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#">Youtube</a></p>
+                        </li>
+                        <li>
+                            <p class="nav-link"><a href="#">Instagram</a></p>
+                        </li>
+                </div>
             </div>
         </footer>
     </body>
